--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,11 @@ dependencies = [
     "ipykernel",
     "torch",
     "pandas",
+    "pywt",
     "scikit-learn",
+    "xgboost",
     "tensorflow",
+    "yfinance",
     "matplotlib",
     "seaborn",
     "cloudflare>=0.7.0",
