--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ bittensor
 torch==2.7.1
 requests
 aiohttp
-timelock==0.0.1.dev0
-timelock-wasm-wrapper==0.0.1.dev0
+timelock
 python-dotenv==1.1.1
 boto3 
 numpy
